<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="top">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
         />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        >
        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_centerHorizontal="true"
            android:progressDrawable="@drawable/dialogcolor"
            android:layout_below="@+id/btn_Attack"
            android:layout_alignRight="@+id/textView"
            android:layout_alignEnd="@+id/textView"
            android:layout_alignLeft="@+id/textview"
            android:layout_alignStart="@+id/textview"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal" />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/lblUserName"
            android:ems="10"
            android:id="@+id/edtUserName"
            android:layout_margin="10dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/lblPassword"
            android:id="@+id/edtPassword"
            android:layout_margin="10dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnLogin"
            android:id="@+id/btnLogin"
            android:layout_margin="10dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/lblAlias"
            android:ems="10"
            android:id="@+id/edtAlias"
            android:layout_margin="10dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnRegister"
            android:id="@+id/btnRegister"
            android:layout_margin="10dp" />
    </LinearLayout>

</LinearLayout>
